add category object

--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -7,8 +7,7 @@
     <%= f.input :condition %>
     <%= f.input :photo %>
     <%= f.input :estimated_value %>
-    <%= f.input :category_id %>
-    
+    <%= f.association :category %>
     <%= f.input :purchase_date %>
     <%= f.input :city %>
     <%= f.input :state %>
