validates and associate category and equipment

--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -27,8 +27,8 @@
         <td><%= equipment.condition %></td>
         <td><%= equipment.photo %></td>
         <td><%= equipment.estimated_value %></td>
-        <td><%= equipment.category_id %></td>
-        <td><%= equipment.user_id %></td>
+        <td><%= equipment.category.name %></td>
+        <td><%= equipment.user.email %></td>
         <td><%= equipment.purchase_date %></td>
         <td><%= equipment.city %></td>
         <td><%= equipment.state %></td>
