--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,6 +4,7 @@
 
 <table>
   <thead>
+    <table class="table">
     <tr>
       <th>Name</th>
       <th>Description</th>
@@ -12,6 +13,7 @@
   </thead>
 
   <tbody>
+    <table class="table table-striped">
     <% @categories.each do |category| %>
       <tr>
         <td><%= category.name %></td>
