--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -3,6 +3,7 @@
 <h1>Listing Equipment</h1>
 
 <table>
+  <table class="table">
   <thead>
     <tr>
       <th>Name</th>
@@ -20,6 +21,7 @@
   </thead>
 
   <tbody>
+    <table class="table table-striped">
     <% @equipment.each do |equipment| %>
       <tr>
         <td><%= equipment.name %></td>
