--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	
+	<%= link_to "Equipment", equipment_index_path %>
+	<%= link_to "Categories", categories_path %>
+	<%= link_to "Bids", bids_path %>
+
 	<div class="container">
 
 
