install simple form bootstrap and cleanup

--- a/app/views/bids/_form.html.erb
+++ b/app/views/bids/_form.html.erb
@@ -1,7 +1,8 @@
 <%= simple_form_for(@bid) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+<form class="form-horizontal">
+  <div class="form-group">
     <%= f.input :offer %>
     <%= f.association :equipment %>
     
