--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Categories</h1>
+<h1>CATEGORIES</h1>
 
 <table class="table table-striped">
   <thead>
@@ -16,9 +16,10 @@
       <tr>
         <td><%= category.name %></td>
         <td><%= category.description %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <td><%= link_to 'Show', category, :class => "btn btn-default btn-sm" %></td>
+        <td><%= link_to 'Edit', edit_category_path(category), :class => "btn btn-default btn-sm"%></td>
+        <td><%= link_to ' Destroy', category, :class => "btn btn-danger btn-sm fa fa-trash-o fa-lg", method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>
+<%= link_to 'New Category', new_category_path, :class => "btn btn-default btn-lg" %>
