--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,7 +1,8 @@
 <%= simple_form_for(@category) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+<form class="form-horizontal">
+  <div class="form-group">
     <%= f.input :name %>
     <%= f.input :description %>
   </div>
