--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for(@equipment) do |f| %>
   <%= f.error_notification %>
 
+<form class="form-horizontal">
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :description %>
